--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "remark-rehype": "^11.1.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.7.1",
     "unified": "^11.0.5",
