--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "ws-server": "tsx server/websocket-server.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "transcription-server": "node scripts/start-transcription-server.js",
-    "dev:full": "concurrently \"npm run dev\" \"npm run transcription-server\""
+    "lint": "next lint"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -62,29 +60,7 @@
     "unified": "^11.0.5",
     "vaul": "^1.1.2",
     "ws": "^8.18.2",
-    "zod": "^3.25.67",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-sheet": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^11.0.3",
-    "lucide-react": "^0.323.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
-    "recharts": "^2.10.4",
-    "sonner": "^1.4.0",
-    "tailwind-merge": "^2.2.1",
-    "tw-animate-css": "^1.0.0",
-    "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
